done all the tasks

--- a/UnsupervisedLearning/notebooks/experiment1_clustering.ipynb
+++ b/UnsupervisedLearning/notebooks/experiment1_clustering.ipynb
@@ -324,6 +324,7 @@
     "em_metrics_copy['algo'] = 'em'\n",
     "\n",
     "combined_metrics = pd.concat([kmean_metrics_copy, em_metrics_copy], axis=0)\n",
+    "print(combined_metrics)\n",
     "# draw the combined plot\n",
     "plot_metrics_vs_cluster(\n",
     "    df = combined_metrics,\n",
@@ -545,8 +546,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T08:22:13.604855Z",
-     "start_time": "2024-11-05T08:22:13.533378Z"
+     "end_time": "2024-11-09T23:31:19.567885Z",
+     "start_time": "2024-11-09T23:31:19.202503Z"
     }
    },
    "cell_type": "code",
@@ -568,7 +569,7 @@
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -837,8 +838,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T08:22:48.252589Z",
-     "start_time": "2024-11-05T08:22:47.704148Z"
+     "end_time": "2024-11-09T23:31:28.805421Z",
+     "start_time": "2024-11-09T23:31:28.338861Z"
     }
    },
    "cell_type": "code",
@@ -887,7 +888,40 @@
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 45
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-09T23:31:30.635979Z",
+     "start_time": "2024-11-09T23:31:30.617003Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "evaluation_results",
+   "id": "5edff6cf768957fa",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kmeans': {'adjusted_rand': 0.0007321870120870233,\n",
+       "  'normalized_mutual_info': np.float64(0.0015293243969372338),\n",
+       "  'adjusted_mutual_info': np.float64(0.0006379920142519834),\n",
+       "  'homogeneity': np.float64(0.002534740254391495),\n",
+       "  'completeness': np.float64(0.001094991290911947)},\n",
+       " 'em': {'adjusted_rand': 0.0007321870120870233,\n",
+       "  'normalized_mutual_info': np.float64(0.0015293243969372338),\n",
+       "  'adjusted_mutual_info': np.float64(0.0006379920142519834),\n",
+       "  'homogeneity': np.float64(0.002534740254391495),\n",
+       "  'completeness': np.float64(0.001094991290911947)}}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 46
   },
   {
    "metadata": {
