--- a/UnsupervisedLearning/notebooks/experiment3_combined.ipynb
+++ b/UnsupervisedLearning/notebooks/experiment3_combined.ipynb
@@ -82,8 +82,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-06T08:14:18.590626Z",
-     "start_time": "2024-11-06T08:14:18.563816Z"
+     "end_time": "2024-11-08T06:49:48.142061Z",
+     "start_time": "2024-11-08T06:49:48.094710Z"
     }
    },
    "cell_type": "code",
@@ -106,7 +106,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 63
   },
   {
    "metadata": {},
@@ -321,37 +321,16 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "2#### Use the resultss from Experiment 2\n",
+    "#### Use the resultss from Experiment 2\n",
     "n componeients for pca, ica, and rp are 25, 55, and 37"
    ],
    "id": "935bfe86a47979c1"
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "deae161e27a7a5be"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-06T08:23:00.593740Z",
-     "start_time": "2024-11-06T08:23:00.576667Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "from src.experiments.experiment1_clustering import ClusteringExperiment",
-   "id": "1e28b184b35e0b2d",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-07T05:53:39.154720Z",
-     "start_time": "2024-11-07T05:52:29.831040Z"
+     "end_time": "2024-11-08T06:51:06.244629Z",
+     "start_time": "2024-11-08T06:49:53.533751Z"
     }
    },
    "cell_type": "code",
@@ -372,7 +351,7 @@
    ],
    "id": "bfc1b9380147d05",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 64
   },
   {
    "metadata": {
@@ -617,15 +596,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-07T06:01:41.611110Z",
-     "start_time": "2024-11-07T06:01:41.591615Z"
+     "end_time": "2024-11-08T06:51:06.286356Z",
+     "start_time": "2024-11-08T06:51:06.260094Z"
     }
    },
    "cell_type": "code",
    "source": [
     "save_csv(metrics, f'results/{dataset}/{experiment_name}', 'combined_metrics')\n",
     "save_pickle(labels, f'results/{dataset}/{experiment_name}', 'combined_labels')\n",
-    "save_pickle(external_metrics, f'results/{dataset}/{experiment_name}', 'combined_external_metrics')"
+    "save_csv(external_metrics, f'results/{dataset}/{experiment_name}', 'combined_external_metrics')"
    ],
    "id": "2283993a11fad700",
    "outputs": [
@@ -633,13 +612,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataframe saved at results/dataset2/experiment3/combined_metrics.csv\n",
-      "Data saved at results/dataset2/experiment3/combined_labels.pkl\n",
-      "Data saved at results/dataset2/experiment3/combined_external_metrics.pkl\n"
+      "Dataframe saved at results/dataset1/experiment3/combined_metrics.csv\n",
+      "Data saved at results/dataset1/experiment3/combined_labels.pkl\n",
+      "Dataframe saved at results/dataset1/experiment3/combined_external_metrics.csv\n"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-08T06:39:29.637204Z",
+     "start_time": "2024-11-08T06:39:29.618842Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "labels = load_pickle('results/dataset2/experiment3/combined_labels.pkl')\n",
+   "id": "826be9aaa7333bd2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(27683)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 59
   },
   {
    "metadata": {
@@ -893,8 +896,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-07T06:00:48.914254Z",
-     "start_time": "2024-11-07T06:00:48.847190Z"
+     "end_time": "2024-11-08T06:51:37.561330Z",
+     "start_time": "2024-11-08T06:51:37.546335Z"
     }
    },
    "cell_type": "code",
@@ -917,7 +920,7 @@
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 67
   },
   {
    "metadata": {},
@@ -1095,8 +1098,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-07T06:05:13.090680Z",
-     "start_time": "2024-11-07T06:05:11.857908Z"
+     "end_time": "2024-11-08T06:53:42.424749Z",
+     "start_time": "2024-11-08T06:53:41.029442Z"
     }
    },
    "cell_type": "code",
@@ -1111,199 +1114,13 @@
    ],
    "id": "c73ea4bdf8c35748",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-07T06:05:24.574374Z",
-     "start_time": "2024-11-07T06:05:24.554810Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "kmeans_metrics",
-   "id": "c612a3de21609da3",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   k        inertia  silhouette_score  calinski_harabasz_score method  \\\n",
-       "0  5   16559.039062          0.220943               305.840454    pca   \n",
-       "1  5  278522.500000         -0.008717                 8.926818    ica   \n",
-       "2  5   17892.277344          0.193176               274.370483     rp   \n",
-       "\n",
-       "   n_components  \n",
-       "0           145  \n",
-       "1           145  \n",
-       "2           145  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>k</th>\n",
-       "      <th>inertia</th>\n",
-       "      <th>silhouette_score</th>\n",
-       "      <th>calinski_harabasz_score</th>\n",
-       "      <th>method</th>\n",
-       "      <th>n_components</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>16559.039062</td>\n",
-       "      <td>0.220943</td>\n",
-       "      <td>305.840454</td>\n",
-       "      <td>pca</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>278522.500000</td>\n",
-       "      <td>-0.008717</td>\n",
-       "      <td>8.926818</td>\n",
-       "      <td>ica</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>17892.277344</td>\n",
-       "      <td>0.193176</td>\n",
-       "      <td>274.370483</td>\n",
-       "      <td>rp</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 51
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-07T06:05:34.930891Z",
-     "start_time": "2024-11-07T06:05:34.909744Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "em_metrics",
-   "id": "d08439dc18361e9f",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   k           bic            aic  silhouette_score  calinski_harabasz_score  \\\n",
-       "0  5  2.089779e+05  -90339.339709          0.220943               305.840454   \n",
-       "1  5  1.119447e+06  820129.976901         -0.005880                 8.868317   \n",
-       "2  5  1.145896e+05 -184727.677240          0.193176               274.370483   \n",
-       "\n",
-       "  method  n_components  \n",
-       "0    pca           145  \n",
-       "1    ica           145  \n",
-       "2     rp           145  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>k</th>\n",
-       "      <th>bic</th>\n",
-       "      <th>aic</th>\n",
-       "      <th>silhouette_score</th>\n",
-       "      <th>calinski_harabasz_score</th>\n",
-       "      <th>method</th>\n",
-       "      <th>n_components</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2.089779e+05</td>\n",
-       "      <td>-90339.339709</td>\n",
-       "      <td>0.220943</td>\n",
-       "      <td>305.840454</td>\n",
-       "      <td>pca</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1.119447e+06</td>\n",
-       "      <td>820129.976901</td>\n",
-       "      <td>-0.005880</td>\n",
-       "      <td>8.868317</td>\n",
-       "      <td>ica</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1.145896e+05</td>\n",
-       "      <td>-184727.677240</td>\n",
-       "      <td>0.193176</td>\n",
-       "      <td>274.370483</td>\n",
-       "      <td>rp</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 52
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-07T06:06:39.895156Z",
-     "start_time": "2024-11-07T06:06:39.112338Z"
+     "end_time": "2024-11-08T06:53:46.984813Z",
+     "start_time": "2024-11-08T06:53:46.067051Z"
     }
    },
    "cell_type": "code",
@@ -1316,17 +1133,31 @@
     "    {'rd': 'ica', 'X': ica_transformed_data},\n",
     "    {'rd': 'rp', 'X': rp_transformed_data}\n",
     "]\n",
-    "metrics, labels, external_metrics = run_combined_cluster(config, [5], y_train)"
+    "metrics, labels, external_metrics = run_combined_cluster(config, [5], y_train)\n",
+    "# save\n",
+    "save_csv(metrics, f'results/{dataset}/{experiment_name}', 'combined_metrics')\n",
+    "save_pickle(labels, f'results/{dataset}/{experiment_name}', 'combined_labels')\n",
+    "save_csv(external_metrics, f'results/{dataset}/{experiment_name}', 'combined_external_metrics')"
    ],
    "id": "2542020ecb921cc",
-   "outputs": [],
-   "execution_count": 53
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe saved at results/dataset2/experiment3/combined_metrics.csv\n",
+      "Data saved at results/dataset2/experiment3/combined_labels.pkl\n",
+      "Dataframe saved at results/dataset2/experiment3/combined_external_metrics.csv\n"
+     ]
+    }
+   ],
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-07T06:06:48.365611Z",
-     "start_time": "2024-11-07T06:06:48.348645Z"
+     "end_time": "2024-11-08T06:53:51.780155Z",
+     "start_time": "2024-11-08T06:53:51.752519Z"
     }
    },
    "cell_type": "code",
@@ -1424,18 +1255,18 @@
        "</div>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-07T06:08:05.893151Z",
-     "start_time": "2024-11-07T06:08:05.852092Z"
+     "end_time": "2024-11-08T06:53:54.426657Z",
+     "start_time": "2024-11-08T06:53:54.409586Z"
     }
    },
    "cell_type": "code",
@@ -1555,12 +1386,12 @@
        "</div>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 56
+   "execution_count": 74
   },
   {
    "metadata": {
